fud2/tests/snapshots/tests__test@dahlia_calyx.snap
---
source: fud2/tests/tests.rs
description: "emit request: dahlia -> calyx"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

dahlia-exe = /test/bin/dahlia
rule dahlia-to-calyx
  command = $dahlia-exe -b calyx --lower -l error $in -o $out

build stdin.futil: dahlia-to-calyx stdin

default stdin.futil
