fud2/tests/snapshots/tests__test@dahlia_through_dahlia-to-calyx_axi-wrapped_to_calyx.snap
---
source: fud2/tests/tests.rs
description: "emit request: dahlia -> calyx through dahlia-to-calyx axi-wrapped"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

parent-map = parent-map.json
dahlia-exe = /test/bin/dahlia
dahlia-args = 
rule dahlia-to-calyx
  command = $dahlia-exe -b calyx --lower -l error $dahlia-args $in > $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out
cider-calyx-passes = -p none
rule calyx-cider
  command = $calyx-exe -l $calyx-lib-path $cider-calyx-passes $args $in > $out

yxi = $calyx-base/target/debug/yxi
rule yxi
  command = $yxi -l $calyx-base $in > $out

python_args = 
axi-generator = $calyx-base/yxi/axi-calyx/axi_generator.py
python = python3
rule gen-axi
  command = $python $axi-generator $python_args $in > $out
rule combine
  command = cat $in > $out
rule remove-imports
  command = sed '1,/component main/{/component main/!d; }' $in > $out

build calyx_1.futil: dahlia-to-calyx dahlia_0.fuse
build calyx_1.yxi: yxi calyx_1.futil
build refified_calyx_1.futil: calyx-pass calyx_1.futil
  pass = external-to-ref
  args = -x external-to-ref:activate=true
build axi_wrapper.futil: gen-axi calyx_1.yxi
build no_imports_refified_calyx_1.futil: remove-imports refified_calyx_1.futil
build calyx_2.futil: combine axi_wrapper.futil no_imports_refified_calyx_1.futil

default calyx_2.futil
