fud2/tests/snapshots/tests__test@plan_calyx-to-cider.snap
---
source: fud2/tests/tests.rs
description: "emit plan: calyx-to-cider"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out

build /output.ext: calyx-with-flags /input.ext

default /output.ext
