fud2/tests/snapshots/tests__test@plan_calyx-to-firrtl.snap
---
source: fud2/tests/tests.rs
description: "emit plan: calyx-to-firrtl"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out
flags = -p none
rule calyx-with-flags
  command = $calyx-exe -l $calyx-base $flags $args $in > $out

yxi = $calyx-base/target/debug/yxi
rule yxi
  command = $yxi -l $calyx-base $in > $out

rule ref-to-external
  command = sed 's/ref /@external /g' $in > $out
rule external-to-ref
  command = sed 's/@external([0-9]*)/ref/g' $in | sed 's/@external/ref/g' > $out
gen-testbench-script = $calyx-base/tools/firrtl/generate-testbench.py
build memories.sv: get-rsrc
rule generate-refmem-testbench
  command = python3 $gen-testbench-script $in > $out
rule dummy
  command = sh -c 'cat $$0' $in > $out

build external.futil: ref-to-external /input.ext
build ref.futil: external-to-ref /input.ext
build memory-info.json: yxi external.futil
build tb.sv: generate-refmem-testbench memory-info.json
build tmp-out.fir: calyx ref.futil
  backend = firrtl
  args = --emit-primitive-extmodules
build /output.ext: dummy tmp-out.fir tb.sv

default /output.ext
